2004-11-29  Sarfraaz Ahmed <asarfraaz@novell.com>

	* addressbook/e-book-backend-exchange.c 
	(e_book_backend_exchange_get_required_fields): Added new
	* addressbook/e-book-backend-gal.c
	(get_required_fields): Added new
	The above two methods were added for the required_field support by
	Sivaiah.

2004-11-27  Sushma Rai  <rsushma@novell.com>

	* storage/exchange-hierarchy-webdav.c:
	(exchange_hierarchy_webdav_parse_folder): Calling
	exchange_folder_size_update() only if permanenturl is
	not NULL. Fixes the crash while bringing up
	exchange-storage.
	Also fixed couple of compile time warnings.

2004-11-26  Sarfraaz Ahmed <asarfraaz@novell.com>

	* configure.in : Bumped the version to 2.1.1
	* NEWS : Updated
	* storage/e-folder-exchange.c : Fixed some warnings.
	* storage/exchange-folder-size.c : Similar
	* storage/exchange-hierarchy-webdav.c : Similar
	* storage/main.c : Similar

2004-11-26  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/xc-commands.c (do_folder_size_menu) : Have a dummy place
	holder for the menu item for fodler sizes.

2004-11-25  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-hierarchy-webdav.c (init): Was not instantiating
	the FolderSize object properly. Fixed this now.

2004-11-24  Sarfraaz Ahmed <asarfraaz@novell.com>
	
	* storage/main.c (set_online_status)(online_status_changed)
	(setup_offline_listener) : Implemented
	(main) : Added code to invoke the offline listener. As of now this
	does not get compiled unless OFFLINE_SUPPORT is defined manually
	in the Makefile. Planning to remove this once the code is fully done.
	* storage/xc-commmands.c : Removed some unused variables.

2004-11-23  Sarfraaz Ahmed <asarfraaz@novell.com>

	* storage/exchange-folder-size.c (exchange_folder_size_update):
	Fixed a crash. The private member was being used uninitialised.
	* storage/exchange-hierarchy-webdav.c : Similar
	* storage/exchange-hierarchy-webdav.h : Similar
	* docs/debug : Added some more examples.
