@@ -1,3 +1,11 @@
+2004-11-30  Sushma Rai <rsushma@novell.com>
+
+	* storage/e-folder-exchange.c (e_folder_exchange_get_folder_size)
+	(e_folder_exchange_save_to_file): Handling return value on error.
+
+	* storage/exchange-folder-size.c (exchange_folder_size_display)
+	Fixed a compile time warning.
+
 2004-11-29  Sarfraaz Ahmed <asarfraaz@novell.com>
 
 	* addressbook/e-book-backend-exchange.c 
